--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -27,6 +27,8 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank">神鸽守金库 官员杀鸽毁巢遭报应</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7cad2b1ea5bfc59b6837390e9c433938-150x120.jpg" align ="left"></a>鸽子有灵吗？，有一件发生在清代甘肃布政司（藩司）的事情作了实证，万物有灵不得不信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11731877.md#1" target="_blank">天地清明引(145) 东流水－君臣生隙1</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11731877.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/07/1207040111051680-150x120.jpg" align ="left"></a>金府。楚淮阳禀报：“已按老爷吩咐，放出风去，言金府高价收购药草。但是现下大疫正盛，百姓手中但有草药，皆留置自用，无人肯售。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank">占星解析香港独立是反送中运动的最终结果</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912111840131538-150x120.jpg" align ="left"></a>从2019年6月开始爆发的香港反送中运动是今年最大的新闻，也是空前而绝后的新闻，是世界民主和人权运动史上光辉的一页。运动至今仍在继续着，很多可歌可泣的青年人的表现和大部分港人不屈不挠、和平、理性、互助且又毫不畏惧强权的精神令人赞叹不已。香港的荣光是在提醒着全世界三十年前那场惨绝人寰的大屠杀的刽子手依然是杀人者和欺骗者.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:47 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/25/n11745238.md#1" target="_blank">五律：酒（二）</a><br></h3>此来亲道骨，何去带仙风。
+一醉云霄外，九升天地中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/24/n11742891.md#1" target="_blank">唐浩：末战</a><br></h3>正邪决战末戏演   香江烽火漫连天   善扬德胜败恶堕   传奇永铭凌霄巅......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/24/n11742996.md#1" target="_blank">台湾古典诗：山中湖映富士山</a><br></h3> 微风淡荡趁悠闲，隐约纱笼富士山； 烟水苍茫横白鹭，金波潋滟绚斑斓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/23/n11739882.md#1" target="_blank">唐浩：劝警</a><br></h3>毋为阶下奴
@@ -35,6 +37,5 @@
   参透世迷尘......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 8:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/22/n11738830.md#1" target="_blank">五律：诗（四）</a><br></h3> 明月长挥景，幽篁好抚琴。 庄生梦蝴蝶，望帝寄春心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/23/n11739866.md#1" target="_blank">唐浩：全球反共</a><br></h3>红朝败落假大空   暴恶残民亿万蒙   四海围击正气聚   百年赤祸散尘空......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:46 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/22/n11738924.md#1" target="_blank">青春期的我们需要家长的理解和关心</a><br></h3>青春期的我们，受到激素的影响，心中会有很多的想法............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007.htm">http://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
