--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,8 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/01-2-150x120.jpg" align ="left"></a>美国国务院12月20日发布新闻通告表示，美国对包括中共和中共官员在内的侵犯宗教自由者采取持续追责行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741434.md#1" target="_blank">哈尔滨医院儿科爆满 走廊座椅贴编号当病床</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741434.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-2-4-150x120.gif" align ="left"></a>最近，因寒冷所致的儿童哮喘再次席卷而来，哈尔滨各家医院儿科诊室爆满。因床位紧张，医院只好将走廊里的座椅贴上编号，当作打吊瓶的临时床位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741441.md#1" target="_blank">圣诞卡求救信 曾被迫害英记者透露更多细节</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741441.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-71081666-150x120.jpg" align ="left"></a>上周末，一张圣诞卡求救信揭发中国上海青浦监狱强制囚犯工作的内幕，引起全球关注。周一，曾在大陆经历类似遭遇的当事人透露更多细节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741009.md#1" target="_blank">挑战叶德娴版桃姐角色 惠英红老态演技引负评</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741009.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/180111044705100615-150x120.jpg" align ="left"></a>演技精湛的香港艺人惠英红，最近在大陆综艺节目《我就是演员》中挑战叶德娴饰演的“桃姐”一角。虽然表演细腻，却被网民评论“不理想”、“总是差那么一点点”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741299.md#1" target="_blank">马思纯零台词诠释抑郁症 网友赞：眼神都是戏</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741299.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ma-sichun-150x120.jpg" align ="left"></a>与周冬雨一起夺得金马双影后的大陆女星马思纯，近日在一短片中零台词诠释忧郁症。在一分多钟的时间里，她展现了一个人从绝望到释然的全过程。网友纷纷夸赞：“眼神里都是戏！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741034.md#1" target="_blank">【新闻看点】习访澳魂系香港 3真相北京心凉</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1189412679-600x400-1-150x120.jpg" align ="left"></a>这次习近平访问澳门，澳门当局神经紧绷，祭出了史无前例的安保，唯恐担心发生意外。不过安全上倒没什么意外，但是其它地方出现了不少意外。总的来说，有一大看点和三大真相，让北京的心“拔凉拔凉”的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740705.md#1" target="_blank">【新闻看点】2019难捱 马云：日接5友借钱电话</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740705.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1409180658462039-150x120.jpg" align ="left"></a>马云日前说，最近，一天接到5个借钱电话，一周10个朋友卖楼；透露中国企业的艰难处境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:34 AM							</td></tr>
@@ -31,7 +27,10 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740190.md#1" target="_blank">《金融时报》2019年度词汇：脱钩</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740190.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1053163368-150x120.jpg" align ="left"></a>2019年已接近尾声，不少媒体或机构都会选出年度词汇来代表这一年的国际局势。而英国《金融时报》专栏作家弗鲁哈尔（Rana Foroohar）所选出的2019年年度词汇则是能体现美中关系演变的“脱钩”（Decoupling）这个字。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738768.md#1" target="_blank">中共介入台立委选举 助统促党候选人贿选</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ca7167ad5785acfc538ca12b7c2b93ef-150x120.jpg" align ="left"></a>调查局台北市调查处接获民众检举，统促党不分区立委候选人何建华，招待17名陆配于12月18日至22日赴中国厦门旅游，且旅游相关费用皆由中共官员落地招待，涉嫌违反《选罢法》；调查局22日会同台北市警局中正一分局，于机场查获返台的陆配，并约谈何建华到案侦讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739571.md#1" target="_blank">黄晓明夫妇无戏可拍 经济放缓令影视业入冬</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739571.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/VCG111219316488-150x120.jpeg" align ="left"></a>大陆影视演员黄晓明的妻子Angelababy近日被曝光今年只拍了一部作品，而黄晓明也是很久没有拍戏了。有分析认为，大陆经济增长持续放缓已经影响到影视行业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 3:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741372.md#1" target="_blank">大陆社交电商刷单泛滥 兴起种草笔记产业链</a><br></h3>大陆社交电商平台被曝充斥着假流量、假宣传、假评论等现象，很多“种草笔记”的背后是一条造假产业链。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739498.md#1" target="_blank">云南恶霸孙小果案重审 再判死刑</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739498.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/15a3384fe6b59efe_ttl7daypku_12-150x120.jpg" align ="left"></a>2019年12月23日，云南恶霸孙小果，因1997年犯强奸罪等罪的再审案件公开宣判，孙小果再被判死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 12:41 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739250.md#1" target="_blank">大陆现新三角债 中共地方当局欠民企巨资</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201131228012320-150x120.jpg" align ="left"></a>临近2019年年末，中共各地方当局拖欠企业欠款再次引发外界关注，因欠款，有的企业已经发不出工资来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 12:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738051.md#1" target="_blank">世界边缘的宁静岛屿 为何成美中角力新战场</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738051.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_15X835-150x120.jpg" align ="left"></a>在世界边缘的挪威海和北大西洋之间，有一群遗世独立般的岛屿。但最近，这个偏远的群岛受到世界媒体关注，成为美中角力的新战场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 12:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739348.md#1" target="_blank">【拍案惊奇】《愿荣光归香港》全新台语歌词</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739348.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e2dc2847003ef2_ttl7daypA5_20191222-____-____-150x120.jpg" align ="left"></a>《新闻拍案惊奇》获授权独家首发：《愿荣光归香港》全新台语歌词、CSM重唱团“六重唱”台语演唱，台湾知名“音乐制作人J”台北录制！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739502.md#1" target="_blank">【翻墙必看】90后女孩遭中共红三代老板强奸</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
 1.传中共红三代涉持枪强奸下属 警方不调查
@@ -41,5 +40,6 @@
 《大纪元时报》日前独家披露了神秘红三代操盘中共权贵海外资产的内幕。该报导揭示了中共权贵家族已渗.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740491.md#1" target="_blank">抗争者被骂曱甴 警官称大众过度解读 引反弹</a><br></h3>警方骂抗争者为“曱甴”，而警民关系主任近日解释不要过度解读，“曱甴”从正面看是很有生命力的说法，引起舆论哗然，遭强烈反弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740164.md#1" target="_blank">哈尔滨一污水管网施工坍塌 4人被埋</a><br></h3>12月23日上午10时15分，黑龙江省哈尔滨市阿城区新利街污水管网工程施工现场塌方，现场作业5人，塌方时4人被埋，1人被救出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:49 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739399.md#1" target="_blank">天津发生3.3级地震 北京唐山有震感</a><br></h3>12月23日凌晨2时44分，天津蓟州区发生3.3级地震。天津、北京、唐山等地震感明显。此次地震是天津7年来最大地震。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/osnkrv285/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
